Lab_Programs/Test/checkMCQ.c

#include<stdio.h>
#include<stdbool.h>
int main()
{
//         int x = 10;
// if (x > 20==false) {
//     printf("x is less than 20");
// } else {
//    printf("x is 20 or more");
// }
    // x is less than 20


        // int k = 0;
        // if (k=0)
        //     printf("Hello");
        //nothing




    // int x = 10;
    // if (x == 10)
    // if (x % 2 == 0)
    //     printf("x is 10 and even");
    // else
    //     printf("x is 10 and odd");
    // else
    // printf("x is not 10");

    //x is 10 and even




    // int x = 7;
    // if (x < 5); {
    // printf("x is greater than 5");
    // }
    //x is greater than 5



    // int x=5;
    // int y = 10;
    // if ((x|y)>15) {
    //     printf("y is less than 15");
    // } else {
    //     printf("y is 15 or more");
    // }

    //y is 15 or more


    // int a = 20;
    // if (a =a%10) {
    //     printf("a is 20");
    // } else {
    //     printf("a is not 20");
    // }
    // a is not 20





    // int value = 15;
    // if (value < 10) 
    //     printf("Greater than 10");
    //  else if (value > 20) 
    //     printf("Less than 20");
    //     printf("Equals 30");

    // Equals 30





    // int a = 1;
    //     if (a--)
    //         printf("True");
    //     if (++a)
    //         printf("False");
    // TrueFalse





    // int a = 1;
    //     if(a)
    //         printf("All is Well ");
    //         printf("I am Well\n");
    //     else                 // error: 'else' without a previous 'if'
    //         printf("I am not a River\n");

        // we canot print multiple stmts without {} in if so if declared it will give error.
         




    // if(-5)
    // {
    //     printf("Germany\n");
    // }
    // if(5)
    // {
    //     printf("Texas\n");
    // }
    // printf("ZING");

    // Germany
    // Texas
    // ZING




    

    // int a=9;
    // if(a==9);   // here if terminated
    // {
    //     printf("Ostrich\n");
    // }
    // else        //error: 'else' without a previous 'if'
    // {
    //     printf("Eggs\n");
    // }
    
    // printf("White");

    





    // int a=5, b=8;
    
    // if( a==5 && (b     ) )
    // {
    //     printf("Gorilla Glass=");
    // }
    // printf("%d %d", a, b);

    //Gorilla Glass=5 8





        int num = 25;
        int result;
        if (!(num % 2 != 0)) {
            result = num * 2;
        } else {
            result = num * 3;
        }

        //75
}